--- a/cb-load.css
+++ b/cb-load.css
@@ -32,7 +32,7 @@
   font-size: 15px;
   color: white;
   font-weight: bold;
-  text-decoration: none
+  text-decoration: none;
 }
 .cb-root .cb-plot {
   width: 75%;
@@ -59,5 +59,18 @@
 }
 
 .cb-title {
-text-align: center;
+  text-align: center;
 }
+
+.cb-select {
+  text-align: center;
+}
+
+select:focus {
+  min-width: 150px;
+  width: auto;
+}
+
+/* .cb-marker-name {
+  width: auto;
+} */
